# llm-jigsaw

./: .gitignore  README.md  benchmark.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
docs/: BENCHMARK.md  RESULTS.md  USAGE.md
docs_site/: benchmark.md  index.md  results.md  usage.md
docs_site/assets/: .gitkeep
docs_site/stylesheets/: extra.css
scripts/: visual_test.py
src/: __init__.py  game.py  grid_annotator.py  image_processor.py  llm_interface.py  metrics.py  prompts.py
src/benchmark/: __init__.py  aggregator.py  cache.py  config.py  plots.py  runner.py
streamlit_app/: app.py  requirements_app.txt
streamlit_app/.streamlit/: config.toml
tests/: test_game.py  test_grid_annotator.py  test_image_processor.py
